--- a/.cproject
+++ b/.cproject
@@ -126,4 +126,5 @@
 			<resource resourceType="PROJECT" workspacePath="/CppTest"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
